--- a/index.html
+++ b/index.html
@@ -28,42 +28,44 @@
         </div>
     </section>
 
-
-    <section class="body-container">
-        <div class="colored-container">
-            <p>Check out our most popular courses!</p>
-        </div>
-        <div class="body-container-element">
-            <img src="assets/icon-animation.svg" alt="icon-animation">
-            <h2>Animation</h2>
-            <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
-            <a href="#">Get Started</a>
-        </div>
-        <div class="body-container-element">
-            <img src="assets/icon-design.svg" alt="icon-design">
-            <h2>Design</h2>
-            <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
-            <a href="#">Get Started</a>
-        </div>
-        <div class="body-container-element">
-            <img src="assets/icon-photography.svg" alt="icon-photography">
-            <h2>Photography</h2>
-            <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
-            <a href="#">Get Started</a>
-        </div>
-        <div class="body-container-element">
-            <img src="assets/icon-crypto.svg" alt="icon-crypto">
-            <h2>Crypto</h2>
-            <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
-            <a href="#">Get Started</a>
-        </div>
-        <div class="body-container-element">
-            <img src="assets/icon-business.svg" alt="icon-business">
-            <h2>Business</h2>
-            <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
-            <a href="#">Get Started</a>
-        </div>
-    </section>
+    <main>
+        <section class="card-container">
+            <div class="intro-card">
+                <p>Check out our most popular courses!</p>
+            </div>
+            <div class="card-element">
+                <img src="assets/icon-animation.svg" alt="icon-animation">
+                <h2>Animation</h2>
+                <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+                <a href="#">Get Started</a>
+            </div>
+            <div class="card-element">
+                <img src="assets/icon-design.svg" alt="icon-design">
+                <h2>Design</h2>
+                <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+                <a href="#">Get Started</a>
+            </div>
+            <div class="card-element">
+                <img src="assets/icon-photography.svg" alt="icon-photography">
+                <h2>Photography</h2>
+                <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
+                <a href="#">Get Started</a>
+            </div>
+            <div class="card-element">
+                <img src="assets/icon-crypto.svg" alt="icon-crypto">
+                <h2>Crypto</h2>
+                <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
+                <a href="#">Get Started</a>
+            </div>
+            <div class="card-element">
+                <img src="assets/icon-business.svg" alt="icon-business">
+                <h2>Business</h2>
+                <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
+                <a href="#">Get Started</a>
+            </div>
+        </section>
+    </main>
+    
 
     <footer>
         <p>Skilled</p>
