--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="#">Skilled</a>
-        <button class="nav-btn btn">Get Started</button>
+        <button class="btn">Get Started</button>
     </nav>
 
 
@@ -21,7 +21,7 @@
                 Our modern courses across a range of in-demand skills 
                 will give you the knowledge you need to live the life you want.
             </p>
-            <button>Get Started</button>
+            <button class="btn">Get Started</button>
         </div>
         <div class="image-hero-wrapper">
             <img src="assets/image-hero-mobile@2x.webp" alt="image-hero">
@@ -35,33 +35,46 @@
             </div>
             <div class="card-element">
                 <img src="assets/icon-animation.svg" alt="icon-animation">
-                <h2>Animation</h2>
-                <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
-                <a href="#">Get Started</a>
+                <div class="card-description">
+                    <h2>Animation</h2>
+                    <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+                    <a href="#">Get Started</a>
+                </div>
+               
             </div>
             <div class="card-element">
                 <img src="assets/icon-design.svg" alt="icon-design">
-                <h2>Design</h2>
-                <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
-                <a href="#">Get Started</a>
+                <div class="card-description">
+                    <h2>Design</h2>
+                    <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+                    <a href="#">Get Started</a>
+                </div>
+
             </div>
             <div class="card-element">
                 <img src="assets/icon-photography.svg" alt="icon-photography">
-                <h2>Photography</h2>
-                <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
-                <a href="#">Get Started</a>
+                <div class="card-description">
+                    <h2>Photography</h2>
+                    <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
+                    <a href="#">Get Started</a>
+                </div>
             </div>
             <div class="card-element">
                 <img src="assets/icon-crypto.svg" alt="icon-crypto">
-                <h2>Crypto</h2>
-                <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
-                <a href="#">Get Started</a>
-            </div>
+                <div class="card-description">
+                    <h2>Crypto</h2>
+                    <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
+                    <a href="#">Get Started</a>
+                </div>
+                </div>
+
             <div class="card-element">
                 <img src="assets/icon-business.svg" alt="icon-business">
-                <h2>Business</h2>
-                <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
-                <a href="#">Get Started</a>
+                <div class="card-description">
+                    <h2>Business</h2>
+                    <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
+                    <a href="#">Get Started</a>
+                </div>
             </div>
         </section>
     </main>
@@ -69,7 +82,7 @@
 
     <footer>
         <p>Skilled</p>
-        <button>Get Started</button>
+        <button class="btn">Get Started</button>
     </footer>
 </body>
 </html>
