--- a/index.html
+++ b/index.html
@@ -9,34 +9,32 @@
 </head>
 <body>
     <nav>
-        <a href="#">Skilled</a>
+        <a href="#" class="font">Skilled</a>
         <button class="btn">Get Started</button>
     </nav>
 
 
     <section class="head-container">
         <div >
-            <h1>Maximize skill,<br>minimize budget</h1>
+            <h1 class="font">Maximize skill,<br>minimize budget</h1>
             <p>
                 Our modern courses across a range of in-demand skills 
                 will give you the knowledge you need to live the life you want.
             </p>
             <button class="btn">Get Started</button>
         </div>
-        <div class="image-hero-wrapper">
-            <img src="assets/image-hero-mobile@2x.webp" alt="image-hero">
-        </div>
+        <div class="image-hero"></div>
     </section>
 
     <main>
         <section class="card-container">
             <div class="intro-card">
-                <p>Check out our most popular courses!</p>
+                <p class="font">Check out our most popular courses!</p>
             </div>
             <div class="card-element">
                 <img src="assets/icon-animation.svg" alt="icon-animation">
                 <div class="card-description">
-                    <h2>Animation</h2>
+                    <h2 class="font">Animation</h2>
                     <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
                     <a href="#">Get Started</a>
                 </div>
@@ -45,7 +43,7 @@
             <div class="card-element">
                 <img src="assets/icon-design.svg" alt="icon-design">
                 <div class="card-description">
-                    <h2>Design</h2>
+                    <h2 class="font">Design</h2>
                     <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
                     <a href="#">Get Started</a>
                 </div>
@@ -54,7 +52,7 @@
             <div class="card-element">
                 <img src="assets/icon-photography.svg" alt="icon-photography">
                 <div class="card-description">
-                    <h2>Photography</h2>
+                    <h2 class="font">Photography</h2>
                     <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
                     <a href="#">Get Started</a>
                 </div>
@@ -62,7 +60,7 @@
             <div class="card-element">
                 <img src="assets/icon-crypto.svg" alt="icon-crypto">
                 <div class="card-description">
-                    <h2>Crypto</h2>
+                    <h2 class="font">Crypto</h2>
                     <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
                     <a href="#">Get Started</a>
                 </div>
@@ -71,7 +69,7 @@
             <div class="card-element">
                 <img src="assets/icon-business.svg" alt="icon-business">
                 <div class="card-description">
-                    <h2>Business</h2>
+                    <h2 class="font">Business</h2>
                     <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
                     <a href="#">Get Started</a>
                 </div>
@@ -81,7 +79,7 @@
     
 
     <footer>
-        <p>Skilled</p>
+        <p class="font">Skilled</p>
         <button class="btn">Get Started</button>
     </footer>
 </body>
