--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </p>
             <button class="btn">Get Started</button>
         </div>
-        <div class="image-hero"></div>
+        <div class="image-mobile"></div>
+        <div class="image-tablet"></div>
+        <div class="image-desktop"></div>
     </section>
 
     <main>
